--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -33,7 +33,7 @@
         <div class="quick-menu">
             <ul>
                 <li><a href="/introduce_ceo.html">애경 소개</a></li>
-                <li><a href="/esg_management_goal.html">ESG</a></li>
+                <li><a href="/esg_management_level.html">ESG</a></li>
                 <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
@@ -158,7 +158,7 @@
             애경그룹은 지난 68년간 고객의 신뢰 속에서<br>
             다양한 이해관계자들과 협력하며 지속적인<br class="mo">
             성장을 이루어 왔습니다.<br><br>
-            꾸준한 믿음과 사랑을 보내주시는 여러분께 깊은 감사드립니다.<br><br>
+            꾸준한 믿음과 사랑을 보내주시는 여러분께<br class="mo"> 깊은 감사드립니다.<br><br>
             애경그룹은 팬데믹을 지나 새로운 도약을
             준비하며 견고한 100년 애경이 되기 위해
             노력하고 있습니다.<br class="pc">언제나 기본에 충실함을
@@ -180,7 +180,7 @@
                     이행해 나가고 있습니다. 더불어 AK홀딩스는
                     사외이사 주도의 거버넌스 위원회를 설치해
                     지배구조의 투명성 제고 및 주주가치 극대화를
-                    실행하고 있으며, 각 계열사 경영진과 함께
+                    실행하고 있으며, 각 계열사 경영진과 함께<br class="mo">
                     환경(E) 및 인권(S) 관련 개선과제를 제시하며
                     실행하고 있습니다.
                 </p>
