--- a/introduce_history.html
+++ b/introduce_history.html
@@ -33,7 +33,7 @@
         <div class="quick-menu">
             <ul>
                 <li><a href="/introduce_ceo.html">애경 소개</a></li>
-                <li><a href="/esg_management_goal.html">ESG</a></li>
+                <li><a href="/esg_management_level.html">ESG</a></li>
                 <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
@@ -547,7 +547,7 @@
                     <li>
                         <span class="month">03</span>
                         <div class="desc">
-                            <p>AMM자산개발 설립(현 AMPLUS자산개발) </p>
+                            <p>AMM자산개발 설립<br>(현 AMPLUS자산개발) </p>
                         </div>
                     </li>
                     <li>
@@ -759,7 +759,7 @@
                     <li>
                         <span class="month">09</span>
                         <div class="desc">
-                            <p>애경백화점 구로본점 오픈(현 AK플라자)</p>
+                            <p>애경백화점 구로본점 오픈<br>(현 AK플라자)</p>
                             <div class="img">
                                 <img src="/images/img_1993_01.png" alt="">
                             </div>
@@ -773,7 +773,7 @@
                     <li>
                         <span class="month">07</span>
                         <div class="desc">
-                            <p>애경화학, 청양공장 준공 및 가동(현 애경케미칼)</p>
+                            <p>애경화학, 청양공장 준공 및 가동<br>(현 애경케미칼)</p>
                             <div class="img">
                                 <img src="/images/img_1992_01.png" alt="">
                             </div>
@@ -857,7 +857,7 @@
                     <li>
                         <span class="month">04</span>
                         <div class="desc">
-                            <p>애경화학, 대전공장 준공 및 가동(현 애경케미칼)</p>
+                            <p>애경화학, 대전공장 준공 및 가동<br>(현 애경케미칼)</p>
                         </div>
                     </li>
                 </ul>
@@ -868,7 +868,7 @@
                     <li>
                         <span class="month">05</span>
                         <div class="desc">
-                            <p>애경화학 주식회사 법인 설립(현 애경케미칼)</p>
+                            <p>애경화학 주식회사 법인 설립<br>(현 애경케미칼)</p>
                         </div>
                     </li>
                     <li>
