--- a/value_management.html
+++ b/value_management.html
@@ -33,7 +33,7 @@
         <div class="quick-menu">
             <ul>
                 <li><a href="/introduce_ceo.html">애경 소개</a></li>
-                <li><a href="/esg_management_goal.html">ESG</a></li>
+                <li><a href="/esg_management_level.html">ESG</a></li>
                 <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
@@ -132,7 +132,7 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li class="mo"><a href="#">경영이념</a></li>
+                <li class="mo"><a href="javascript:;">경영이념</a></li>
                 <li><a href="/value_founded.html">핵심가치</a></li>
                 <li class="active"><a href="#">경영이념</a></li>
                 <li><a href="/value_talent.html">인재상</a></li>
