--- a/value_talent.html
+++ b/value_talent.html
@@ -33,7 +33,7 @@
         <div class="quick-menu">
             <ul>
                 <li><a href="/introduce_ceo.html">애경 소개</a></li>
-                <li><a href="/esg_management_goal.html">ESG</a></li>
+                <li><a href="/esg_management_level.html">ESG</a></li>
                 <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
@@ -161,7 +161,7 @@
                         <p class="tit">존중</p>
                         <p class="sub-tit">구성원을 존중하는 마음으로<br>
                             소통하고 협업합니다.</p>
-                        <p class="desc">다양성의 존중과 협업이 성과를 만드는 데<br class="mo">
+                        <p class="desc">다양성의 존중과 협업이 성과를 만드는데<br class="mo">
                             큰 힘을 발휘한다는 것을 믿으며,<br class="mo">
                             문제를 발굴하고 개선하려는 구성원들의<br class="mo">
                             용기 있는 시도를 존중합니다.</p>
