--- a/esg_main_activity_gov.html
+++ b/esg_main_activity_gov.html
@@ -133,7 +133,7 @@
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="mo"><a href="javascript:;">주요 ESG 활동</a></li>
-                <li><a href="/esg_news.html">ESG 소식</a></li>
+                <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                 <li class="active"><a href="javascript:;">주요 ESG 활동</a></li>
             </ul>
         </div>
