--- a/investment_info.html
+++ b/investment_info.html
@@ -144,7 +144,11 @@
 <div class="content">
     <div class="cont">
         <div class="iframe-wrap"><!-- 6/8 업데이트 iframe 영역 -->
-            공시자료 iFrame 영역
+            <div style="text-align: center;">
+                <iframe title="공시자료" height="950" width="500"
+                        src="https://dart.fss.or.kr/html/search/SearchCompanyIR3_M.html?textCrpNM=AK홀딩스" frameborder="0"
+                        scrolling="no" style="text-align:center;width:740px;"></iframe>
+            </div>
         </div>
     </div>
 </div>
